多方块舱室外壳修复/配方修复